--- a/Refs_RSeqFlow.bib
+++ b/Refs_RSeqFlow.bib
@@ -1,12 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for M. Gonzalo Claros at 2022-10-20 17:02:55 +0200 
+%% Created for M. Gonzalo Claros at 2022-11-10 15:43:59 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Scrucca2016,
+	author = {Luca Scrucca and Michael Fop and T. Brendan Murphy and Adrian E. Raftery},
+	date-added = {2022-11-10 12:42:30 +0100},
+	date-modified = {2022-11-10 12:43:50 +0100},
+	doi = {10.32614/RJ-2016-021},
+	journal = {The {R} Journal},
+	number = {1},
+	pages = {289--317},
+	title = {{mclust} 5: clustering, classification and density estimation using {G}aussian finite mixture models},
+	volume = {8},
+	year = {2016}}
+
+@article{Charrad2014,
+	author = {Malika Charrad and Nadia Ghazzali and V{\'e}ronique Boiteau and Azam Niknafs},
+	date-added = {2022-11-10 12:34:33 +0100},
+	date-modified = {2022-11-10 12:34:33 +0100},
+	journal = {Journal of Statistical Software},
+	number = {6},
+	pages = {1--36},
+	title = {{NbClust}: An {R} Package for Determining the Relevant Number of Clusters in a Data Set},
+	url = {https://www.jstatsoft.org/v61/i06/},
+	volume = {61},
+	year = {22014},
+	bdsk-url-1 = {https://www.jstatsoft.org/v61/i06/}}
 
 @article{Kleinberg1999,
 	abstract = {The network structure of a hyperlinked environment can be a rich source of information about the content of the environment, provided we have effective means for understanding it. We develop a set of algorithmic tools for extracting information from the link structures of such environments, and report on experiments that demonstrate their effectiveness in a variety of context on the World Wide Web. The central issue we address within our framework is the distillation of broad search topics, through the discovery of ``authorative'' information sources on such topics. We propose and test an algorithmic formulation of the notion of authority, based on the relationship between a set of relevant authoritative pages and the set of ``hub pages'' that join them together in the link structure. Our formulation has connections to the eigenvectors of certain matrices associated with the link graph; these connections in turn motivate additional heuristrics for link-based analysis.},
