--- a/Rmds/80_GLM.Rmd
+++ b/Rmds/80_GLM.Rmd
@@ -9,16 +9,9 @@
 The recommendation of [@Li2022cf] is to **use non-parametric Wilcoxon rank-sum test with large sample sizes**, with _large_ meaning $>10$ samples per experimental condition, since it is **more robust to outliers**. The Wilcoxon test developed in 1956 [@WILCOXON1946wa] is also known as the Mann-Whitney test, developed in 1947 [@Mann-Withney1947]. Wilcoxon rank-sum test is known to be **powerful for skewed distributions**, as is the case with gene expression counts measured by RNA-seq.
 </div>
 
-Non-parametric approaches, such as `NOISeq` `SAMseq` or the Wilcoxon test require more replicates (usually 5 or more) than parametric methods (usually 3, but some of them can work with only 1 replicate [@GonzalezGayte2017]). The most frequent case when studying non-model species is that the number of replicates per experimental condition is not so high (usually 3 or less than 5) that allows a non-parametric study. Therefore, the parametric analysis that provides the best results in the recent study of @Li2022cf is the **combination of `limma + voom`** (very similar to the `limma-trend`). This [GLM] approach is an extension of classical linear models to [non-normally distributed response data](https://online.stat.psu.edu/stat504/lesson/6/6.1) (including linear regression, logistic regression and Poisson regression) [@Nelder1972GLM], where `glm()` is used to fit [GLM]s on the variable whose heteroskedascity has been corrected, while `lm()` is used to fit linear models (regression, and analysis of variance and covariance). 
+Non-parametric approaches, such as `NOISeq` `SAMseq` or the Wilcoxon test require more replicates (usually 5 or more) than parametric methods (usually 3, but some of them can work with only 1 replicate [@GonzalezGayte2017]). The most frequent case when studying non-model species is that the number of replicates per experimental condition is not so high (usually 3 or less than 5) that allows a non-parametric study. Therefore, the parametric analysis that provides the best results in the recent study of @Li2022cf is the **combination of `limma + voom`** (very similar to the `limma-trend`, but more powerful). This is a [GLM] approach that extends classical [linear models](#differential-expression) to [non-normally distributed response data](https://online.stat.psu.edu/stat504/lesson/6/6.1) (including linear regression, logistic regression and Poisson regression) [@Nelder1972GLM], where `glm()` is used to fit [GLM]s on the variable whose heteroskedascity has been corrected, while `lm()` is used to fit linear models (regression, and analysis of variance and covariance). 
 
-Typically, any linear model imply the [following assumptions](https://www.r-bloggers.com/2021/10/simple-linear-regression-in-r/):
-
-* **Log-linearity**: a straight line between the log values of _x_ and _y_ (a constant change in a predictor leads to a constant change in the response variable); in terms of gene expression, the response variable _y_ is assumed to follow an exponential family distribution with _mean_ ($\mu$).
-* **Homoskedasticity**: noise hase the same variance along the variables.
-* **Normality**: noise is normally distributed.
-* **Independence**: error is independent of variables and does now follow a gaussian/normal distribution.
-
-Independently of the sample size, violation of these parametric assumptions would lead to ill-behaved _P_-values and likely failed FDR control [@BenjaminiHochberg1995ps]. Obtaining [DEG]s using [edgeR] and [limma] libraries can be addressed by three different parametric approaches:
+Since RNA-seq data usually have heterogeneous sample sizes and violate these parametric requirements of [linear regression](#differential-expression), they would lead to ill-behaved _P_-values and likely failed FDR control [@BenjaminiHochberg1995ps]. Obtaining [DEG]s using [edgeR] and [limma] libraries can be addressed by three different parametric approaches:
 
 * **Exact _t_-test** is based on the Student's _t_-test [@Robinson2008ro] for a difference in mean between two groups of negative binomial random variables. It depends on [`exactTest()` function](https://www.r-bloggers.com/2020/09/exact-tests-and-plots-with-edger-basic-differential-expression-analysis/). It is rapid and easy-to-do, but **many false positive**s are obtained, as revealed by [@Li2022cf].
 * **Quasi-likelihood F-tests (QLF)** performs the quasi-likelihood (QL) F-test [@Lund2012; @Lun2016] based on [GLM], with some enhancements and slight differences on trend and FDR methods. In fact, it performs a _genewise negative binomial generalized linear model with quasi-likelihood tests_ with `glmQLFit()` (preferred over `glmLRT()`) and `glmQLFTest()` (or the more rigurous `glmTreat()`) functions. Since they provide the most accurate type I error control and adds a bayesian squeezing of data from [limma] package, the results are better than exact tests for RNA-seq under the assumption that genes should exhibit a [binomial negative][NB] distribution, as [indicated above](#binomialNegative).
