--- a/Rmds/160_Networks.Rmd
+++ b/Rmds/160_Networks.Rmd
@@ -59,10 +59,10 @@ The [DEG]s have been [already filtered](#filtering) as `putative` and then the m
 
 ```{r}
 CLUSTER_LIST <- list()
-# most variable genes
-CLUSTER_LIST[["Most_variable_genes"]] <- list(expr_matrix = t(scale(matriz_filt)))
+# most variable genes for a reasonable number of nodes
+if (nrow(matriz_filt) < NODE_MAX) CLUSTER_LIST[["Most_variable_genes"]] <- list(expr_matrix = t(scale(matriz_filt)))
 
-CLUSTER_LIST[["Variant_DEGs"]] <- list(expr_matrix = t(m.ctf.std))
+if (nrow(m.ctf.std) < NODE_MAX) CLUSTER_LIST[["Variant_DEGs"]] <- list(expr_matrix = t(m.ctf.std))
 
 txt <- "AHC_Clust_"
 i <- 1
@@ -104,6 +104,7 @@ To avoid the multitesting problem in large number of data sets, the adjusted _P_
 
 </details> 
 [END EXPANDIBLE]: #
+
 
 
 ```{r, results='asis'}
@@ -179,7 +180,7 @@ The process of building networks includes:
 3. An histogram of the conectivity and a scatter plot with cumulative frequency.
 
 
-```{r netConnect, results='asis', fig.width=5, fig.height=4, out.width=c('25%', '30%', '45%')}
+```{r netConnect, results='asis', fig.width=5, fig.height=4, out.width='32%'}
 # An analysis for each CLUSTER_LIST element
 i <- 1
 for (i in 1:list_length) {
@@ -229,7 +230,7 @@ for (i in 1:list_length) {
   tmp <- colnames(CLUSTER_LIST[[i]]$expr_matrix) %in% GEOD_IDs
   myIDs_2Plot <- CLUSTER_LIST[[i]]$expr_matrix[, tmp]
   theTitle <- "Profiles of geodesic IDs"
-  print(SelectedGeneProfilePlots(myIDs_2Plot,
+  print(PlotGeneProfiles(myIDs_2Plot,
                          aTitle = theTitle))
 
   cat("   \n")  # required to combine markdown with plots
@@ -328,6 +329,10 @@ for (i in 1:list_length) {
   cat("   \n")  # required to combine markdown with plots
 }
 ```
+
+
+
+
 
 
 ## Communities {.tabset .tabset-fade .tabset-pills}
