--- a/Rmds/160_Networks.Rmd
+++ b/Rmds/160_Networks.Rmd
@@ -5,7 +5,7 @@
 
 Network approaches hold great promise in facilitating our understanding of biological processes since they are a powerful way to model the biological processes measured by high-throughput sequencing, including transcriptomic, epigenomic, and genomic information. The idea is to map the physical or functional interactions between cellular components to construct a **biological network** (or **graph**) that represent the global organisation of those cellular components to infer how they can shape function of living cells [@Sia2022]. In these networks/graphs, **nodes** (_vertices, vertex, actors_) corresponding to cellular components are connected by **edges** (_links, ties, relations_) representing either physical or functional interactions determined from the empirical interaction data. Edges can be [**directed**, **undirected** or **weighted**](https://www.ebi.ac.uk/training/online/courses/network-analysis-of-protein-interaction-data-an-introduction/wp-content/uploads/sites/64/2020/08/new-fig-4.png). Many biological networks are of a bipartite nature, meaning they consist of two different types of nodes, with connections only forming between the different node sets [@Calderer2021jd].
 
-**Gene co-expression networks** ([GCN]s, where genes are nodes, and edges link genes that have co-expression relationships) are undirectred graphs that provide an essential tool for the study of biological systems. Co-expression reflect a similarity of gene expression patterns across various experimental conditions, suggesting the function of the characterised genes can be extended to uncharacterised neighbours in the network. However, [GCN]s do not provide any information about the causality relationships between genes (e.g., activation or inhibition), and edges only represent the fact that there exists a correlation or dependency relationship among genes. Debates on normalization methods, use of Pearson's or Spearman's correlation measures as co-expression surrogates, and significance and relevance are still alive and ongoing [@TIERI2019]. The [GCN] is widely used to deduce the unknown genes by validating known gene functional functions and regulatory relationships between genes, because genes under the same regulatory control tend to be functionally related [@Parsana2019jm; @Emamjomeh2017tn] based on a 'guilt-by-association' approach [@Beiki2016db]. This has been revealed a successful approach to annotate unknown and uncharacterised genes involved in specific biological roles  and to identify new genes involved in biological mechanisms [@Zainal-Abidin2022tj].
+**Gene co-expression networks** ([GCN]s, where genes are nodes, and edges link genes that have co-expression relationships) are undirectred graphs that provide an essential tool for the study of biological systems. Co-expression reflects a similarity of gene expression patterns across various experimental conditions, suggesting the function of the characterised genes can be extended to uncharacterised neighbours in the network. However, [GCN]s do not provide any information about the causality relationships between genes (e.g., activation or inhibition), and edges only represent the fact that there exists a correlation or dependency relationship among genes. Debates on normalization methods, use of Pearson's or Spearman's correlation measures as co-expression surrogates, and significance and relevance are still alive and ongoing [@TIERI2019]. The [GCN] is widely used to deduce the unknown genes by validating known gene functional functions and regulatory relationships between genes, because genes under the same regulatory control tend to be functionally related [@Parsana2019jm; @Emamjomeh2017tn] based on a 'guilt-by-association' approach [@Beiki2016db]. This has been revealed a successful approach to annotate unknown and uncharacterised genes involved in specific biological roles  and to identify new genes involved in biological mechanisms [@Zainal-Abidin2022tj].
 
 Biological networks have been observed to be **highly modular**, that means that they display groups of nodes that are enriched for links to each other relative to other parts of the network. These tightly connected nodes (genes) define a **community** (_group, module, unit_ or _cluster_) assumed to be involved in really similar biological functions that are usually responsible for a common phenotype. Hence, the central hypothesis to biological network analysis is that _highly connected nodes (genes) represent organised communities that conduct one or more biological functions [@Fortunato2016] that can extract new biological knowledge from a network_.
 
@@ -381,9 +381,9 @@ for (i in 1:list_length) {
   cat("   \n")  # required to combine markdown with plots
 
   # red interactiva con etiquetas
-  ggp_tmp <- visIgraph(aNet) %>% 
-                visNodes(size = 10)
-  print(ggp_tmp)
+  visIgraph(aNet) 
+  # %>% visNodes(size = 10)
+  # print(ggp_tmp)
   
   cat("   \n")  # required to combine markdown with plots
   
